2004-08-23  Ilja Booij  <ilja@ic-s.nl>

	* dbmail.conf: moved POSTMASTER entry from SMTP to DBMAIL section.
	Removed DBMAIL_FROM_ADDRESS from config file because it's no
	longer used.

	* rfcmsg.c (db_parse_as_text): now sets POSTMASTER address
	from dbmail.conf as From address.

	* imap4.c (IMAPClientHandler): reset nfaultyresponses after 
	a command was sent to the server that parsed OK.

	* sql/mysql/migrate_from_1.x_to_2.0_innodb.mysql: fixed faulty
	foreign key reference thanks to ville at thesubmachine dot com
	* vut2dbmail.c: removed from distribution. Also removed from
	Makefile.am and ran automake && autoreconf after that.

2004-08-20  Aaron Stone  <aaron@serendipity.cx>

	* man/dbmail-users.1: options -s and -S had been left out of
	part of the SYNONSIS section.

2004-08-20  Ilja Booij  <ilja@ic-s.nl>

	* sql/postgresql/migrate_from_1.x_to_2.0.pgsql: removed old foreign
	key constraint.

	* lmtp.c (lmtp): fixed off by one error adding element to list.

2004-08-16  Ilja Booij  <ilja@ic-s.nl>

	* sql/postgresql/migrate_from_1.x_to_2.0.pgsql: now also renames
	primary keys, which are not automatically renamed when renaming
	a table.

2004-08-06  Ilja Booij  <ilja@ic-s.nl>

	* dbsearch.c (db_search_range): changed query that wasn't using 
	indexes properly in PostgreSQL to one that does.

	* dbmsgbuf.c (db_dump_range): changed query that wasn't using 
	indexes properly in PostgreSQL to one that does.
	(db_init_msgfetch): changed query that wasn't using 
	indexes properly in PostgreSQL to one that does.

2004-08-05  Ilja Booij  <ilja@ic-s.nl>

	* sql/mysql/migrate_from_1.x_to_2.0.mysql:  removed removal
	of same indexes because they're not present in all installations.

	* sql/mysql/migrate_from_1.x_to_2.0_innodb.mysql: removed removal
	of same indexes because they're not present in all installations.

	* pipe.c (store_message_temp): changed reference to 
	dbmail-maintenance to dbmail-util.

	* dbmail.conf: changed all references to dbmail-maintenance to 